--- a/assets/css/diseno.css
+++ b/assets/css/diseno.css
@@ -15,7 +15,7 @@ body {
   width: 90%;
   max-width: 1200px;
   margin: 40px auto;
-  background: #949494;
+  background: #ffffff;
   padding: 20px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
