--- a/assets/css/foto.css
+++ b/assets/css/foto.css
@@ -144,6 +144,25 @@ body {
 .flecha-flotante {
     position: fixed;
     bottom: 50%;
+    left: 1rem;
+
+    width: 50px;
+    height: 50px;
+    background-color: rgba(0, 0, 0, 0.7);
+    /* Fondo oscuro con transparencia */
+    color: var(--primary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    /* Esquinas redondeadas */
+    cursor: pointer;
+    font-size: 24px;
+    transition: background 0.3s ease;
+}
+.flecha-flotante.right {
+    position: fixed;
+    bottom: 50%;
     left: 90%;
 
     width: 50px;
@@ -160,7 +179,6 @@ body {
     font-size: 24px;
     transition: background 0.3s ease;
 }
-
 .flecha-flotante:hover {
     background-color: rgba(0, 0, 0, 0.9);
     /* Cambio de color al pasar el mouse */
