--- a/assets/css/manual.css
+++ b/assets/css/manual.css
@@ -145,8 +145,7 @@ body {
 .flecha-flotante {
     position: fixed;
     bottom: 50%;
-    left: 90%;
-
+    left: 1rem;
     width: 50px;
     height: 50px;
     background-color: rgba(0, 0, 0, 0.7);
@@ -161,12 +160,44 @@ body {
     font-size: 24px;
     transition: background 0.3s ease;
 }
-
+.flecha-flotante.right{
+    position: fixed;
+    bottom: 50%;
+    left: 95%;
+    width: 50px;
+    height: 50px;
+    background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro con transparencia */
+    color: var(--primary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px; /* Esquinas redondeadas */
+    cursor: pointer;
+    font-size: 24px;
+    transition: background 0.3s ease;
+  }
 .flecha-flotante:hover {
     background-color: rgba(0, 0, 0, 0.9);
     /* Cambio de color al pasar el mouse */
 }
 
+.projects{
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
+    width: 5rem;
+    height: 2.4rem;
+    background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro con transparencia */
+    color: var(--primary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px; /* Esquinas redondeadas */
+    cursor: pointer;
+    font-size: 24px;
+    transition: background 0.3s ease;
+  }
+  
 /* Contenedor donde aparecerán las huellas */
 .footprint-container {
     width: 500px;
